
	* BinaryFormatter.cs, MessageFormatter.cs, ObjectReader.cs: Added support
	  for TypeFilter property.

2003-11-16  Lluis Sanchez Gual <lluis@ximian.com>

	* BinaryFormatter.cs, MessageFormatter.cs, ObjectWriter.cs: 
	  Implemented support for AssemblyFormat property.

2003-11-12  Lluis Sanchez Gual <lluis@ximian.com>

	* ObjectReader.cs, ObjectWriter.cs: Changed some GetType calls to "is" checks.

2003-07-28  Duncan Mak  <duncan@ximian.com>

	* BinaryFormatter.cs (WriteBinaryHeader): changed from public to
	private.

2003-07-25  Lluis Sanchez Gual <lluis@ximian.com>

    * MessageFormatter.cs: WriteMethodCall(): It must write all parameters,
      including ref and out.

2003-07-24  Lluis Sanchez Gual <lluis@ximian.com>

    * ObjectReader.cs, ObjectWriter.cs, BinaryCommon.cs: Fixed bug #45970.

2003-07-17  Lluis Sanchez Gual <lluis@ximian.com>

    * ObjectReader.cs: Keep MemberInfo members in type's metadata object, so it is
      not necessary to query them for every object.
    * ObjectWriter.cs: If the value being serialized is a value type (not boxed)
      then there is no need to register it in the ObjectIDGenerator, because it is
      not possible to have two references to the same value type object.

2003-05-13  Lluis Sanchez Gual <lluis@ideary.com>

    * ObjectReader.cs: Changed signature of ReadObjectGraph, so now it returns the
      deserialized object and the headers.
    * MessageFormatter.cs: The result of the call to the HeaderHandler delegate is
      now interpreted as the uri of the target object. This seems to be MS.NET
      behavior.
	* BinaryFormatter.cs: Deserialize now calls the HeaderHandler delegate,
	  if provided.

2003-02-25  Lluis Sanchez Gual <lluis@ideary.com>

	* BinaryFormatter.cs: Implemented support for binders.
    * MessageFormatter.cs: Implemented support for binders.
    * ObjectReader.cs: Implemented support for binders.

2003-02-04  Lluis Sanchez Gual <lluis@ideary.com>
